# simply-datetime

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CythonUtility.cmake  FindCython.cmake
config/platform/macos/: Info.plist
docs/: Doxyfile  project_dir.md
docs/diagram/: simplydt_clsd.drawio
docs/misc/: inaug.md
docs/prj/: inaug.md
docs/ref/: generate_docs.bat  generate_docs.sh  index.html
docs/templ/: Doxyfile.in  README.md.in  inaug.md.in
include/simplydt/common/coord_universal_time/: utc_util.hpp
include/simplydt/common/gregorian_calendar/: gregorian_util.hpp
include/simplydt/common/interval/: interval.hpp
include/simplydt/common/julian_date_system/: jdn_util.hpp
include/simplydt/common/range/: int_range.hpp
include/simplydt/common/sequence/: linked_sequence.hpp
include/simplydt/common/string/: string_util.hpp
include/simplydt/coord_universal_time/: utc_defs.hpp  utc_util.hpp
include/simplydt/datetime/: datetime.hpp
include/simplydt/datetime/comp/: sdt_datetime.hpp  sdt_sdatetime.hpp
include/simplydt/datetime/comp/virtual/: sdt_sdatetime.hpp  vdatetime.hpp  vdatetime_ex.hpp
include/simplydt/datetime/date/: date_interval.hpp  date_utility.hpp
include/simplydt/datetime/date/comp/: dt_date.hpp  dt_vdate.hpp
include/simplydt/datetime/date/comp/virtual/: dt_vdate.hpp
include/simplydt/datetime/date/unit/: dt_day.hpp  dt_month.hpp  dt_year.hpp
include/simplydt/datetime/sequence/: dt_sequence.hpp
include/simplydt/datetime/time/: time_interval.hpp
include/simplydt/datetime/time/comp/: dt_stime.hpp  dt_time.hpp  dt_vtime.hpp  dt_vtime_ex.hpp
include/simplydt/datetime/time/comp/virtual/: dt_vtime.hpp  dt_vtime_ex.hpp
include/simplydt/datetime/time/unit/: dt_hour.hpp  dt_millisecond.hpp  dt_minute.hpp  dt_second.hpp
include/simplydt/duration/: duration.hpp  duration_interval.hpp
include/simplydt/duration/comp/: dt_duration.hpp  dt_vduration.hpp
include/simplydt/duration/unit/: dur_unit_def.hpp
include/simplydt/gregorian_calendar/: gregorian_defs.hpp  gregorian_util.hpp
include/simplydt/julian_calendar/: julian_defs.hpp  julian_util.hpp
include/simplydt/meta/templ/: info.h.in  version.h.in
python/: CMakeLists.txt
python/cmake/: PythonUtility.cmake
python/simplydt/: CMakeLists.txt  __init__.py
python/simplydt/_simplydt_lib/: __init__.py  gregorian_util.pyx
python/simplydt/gregorian_calendar/: __init__.py  gregorian_util.pxd  gregorian_util.pyx
python/simplydt/simplydt_lib/: _core.pxd  _core.pyx
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/coord_universal_time/: utc_util.cpp
src/common/gregorian_calendar/: gregorian_util.cpp
src/common/julian_date_system/: jdn_util.cpp
src/common/range/: int_range.cpp
src/common/string/: string_util.cpp
src/coord_universal_time/: CMakeLists.txt  utc_util.cpp
src/datetime/: datetime.cpp
src/datetime/date/: date_interval.cpp
src/datetime/time/: time_interval.cpp
src/duration/: duration.cpp
src/gregorian_calendar/: CMakeLists.txt  gregorian_util.cpp
src/meta/: CMakeLists.txt
tests/: CMakeLists.txt  dev_exe.cpp
tests/benchmark/: CMakeLists.txt
tests/benchmark/coord_universal_time/: CMakeLists.txt  utc_util_bm.cpp
tests/benchmark/gregorian_calendar/: CMakeLists.txt  greg_util_bm.cpp
tests/cli/: CMakeLists.txt  dev_exe.cpp
tests/unit/: CMakeLists.txt
tests/unit/coord_universal_time/: CMakeLists.txt  utc_util_tests.cpp
tests/unit/datetime_cls/: datetime_tests.cpp
tests/unit/dt_sequence_tests/: date_tests.cpp  datetime_ex_tests.cpp
tests/unit/gregorian_calendar/: CMakeLists.txt  greg_calen_tests.cpp  greg_util_tests.cpp
tests/unit/string/: CMakeLists.txt  string_util_tests.cpp
